--- a/style.css
+++ b/style.css
@@ -1,4 +1,135 @@
-h2{
-    color:blue;
-    font-size: larger;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto&display=swap');
+
+:root{
+    --image-color:lightgray;
+    --primary-color:aquamarine;
+    --margin-bottom:10px;
+    --margin-top:10px;
+    --margin-top:15px;
+    --box-shadow:rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+header > div{
+    height:200px;
+    background-color:var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+nav {
+    background-color: black;
+    color:white !important;
+    display: flex;
+    justify-content: flex-start;
+}
+
+nav > ul {
+   list-style: none;
+   display: flex;
+   justify-content: flex-start;
+   margin-left: 5px;
+}
+
+nav ul li {
+    padding: 6px;
+}
+
+.app_container{
+    display: flex;
+    justify-content: space-around;
+    margin: 15px 5px;
+}
+
+.main__img{
+    width:690px;
+    height: 110px;
+    background-color: var(--image-color);
+    color:black;
+    padding: 10px;
+    box-shadow: var(--box-shadow)
+}
+
+.small__img{
+    width: 690px;
+    height: 40px;
+    margin-bottom: var(--margin-bottom);
+    background-color: var(--image-color);
+    color:black;
+    padding:10px;
+    box-shadow: var(--box-shadow)
+}
+
+.app_container__about h1,p,h3{
+    margin-bottom: var(--margin-bottom);
+}
+.app_container__description h1,p,h3{
+    margin-bottom: var(--margin-bottom);
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--image-color);
+    height: 50px;
+}
+.some_text{
+    margin-top: 10px;
+}
+
+/*Small screens and laptops*/
+@media screen and (min-width: 769px) and (max-width:1024px)
+{
+    .app_container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main__img,.small__img{
+        width: 98vw;
+    }
+    .app_container__description{
+        margin-top: var(--margin-top);
+    }
+}
+
+/*ipads and tablets*/
+@media screen and (min-width: 481px) and (max-width:768px)
+{
+    .app_container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main__img,.small__img{
+        width: 98vw;
+    }
+    .app_container__description{
+        margin-top: var(--margin-top);
+    }
+}
+
+
+/*Mobile devices*/
+@media screen and (min-width: 320px) and (max-width:480px)
+{
+    .app_container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main__img,.small__img{
+        width: 98vw;
+    }
+    .app_container__description{
+        margin-top: var(--margin-top);
+    }
 }
